<resources>

    <string name="app_name">Amikom Social</string>
    <string name="app_title">AmikomSocial</string>
    <string name="app_login_title">Login User</string>
    <string name="app_post_title">Posting Shout</string>
    <string name="app_setting_title">Sharing Post</string>
    <string name="app_user_title">User Info</string>
    <string name="app_version">Stable 4.8</string>

    <string name="app_team">Arif Laksito (Project Leader, Webservice and Code)\nFarizal Tri Anugrah, Rakhmad Ikhsanudin, Rizky Tanjung (Code)\nDoni Prabowo, Purwaji Santoso (Design and Layout)\n\nhttp://www.facebook.com/groups/adem.android\n\nhttp://www.amikomsocial.com</string>
    
    <string name="post_title">Write your Shout here</string>
    <string name="post_count">Character Remain 160</string>
    <string name="post_button">Send</string>
    
    <string name="list_image">Image User</string>
    <string name="list_refresh">Press to Refresh</string>
    
    <string name="log_txt">Login as Amikom student or Amikom lecturer to get more features from AmikomSocial Application</string>
    <string name="log_usr_txt">Nik/Npm</string>
    <string name="log_pwd_txt">Password</string>
    <string name="log_btn_txt">Login</string>
    
    <string name="profile_info">Welcome to AmikomSocial Application\nUser Login Information: </string>
    <string name="profile_img_tap">(Tap image to change)</string>
    <string name="profile_alias">Edit Username</string>
    
    <string name="fb_txt">Connect Facebook account to Amikomsocial and you can share your shout to Facebook wall.</string>
    <string name="fb_title">Facebook</string>
    <string name="fb_unconnect">Facebook (Not Connected)</string>
    
    <string name="tw_txt">Connect Twitter account to Amikomsocial and you can share your shout to Timeline.</string>
    <string name="tw_title">Twitter</string>
    <string name="tw_unconnect">Twitter (Not Connected)</string>
    
    <string name="dialog_usr_txt">Use alphanumeric, underscore, lowercase and character count(5&#8211;15)</string>
    
	<string name="actionbar_activity_not_found">Failed to open intent</string>
	
	<string name="twitter_callback">http://amikomsocial.com</string>
	<string name="twitter_oauth_verifier">oauth_verifier</string>
	
</resources>